[gd_scene load_steps=10 format=3 uid="uid://bc8ihhlscs4db"]

[ext_resource type="Script" uid="uid://hpk0oe5w1t08" path="res://Characters/guys/guy.gd" id="1_x6tra"]
[ext_resource type="Texture2D" uid="uid://c0vdvxs6slkiv" path="res://Sprite/face.png" id="2_jh5vx"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_jh5vx"]
shading_mode = 2
albedo_texture = ExtResource("2_jh5vx")
albedo_texture_force_srgb = true

[sub_resource type="SphereMesh" id="SphereMesh_73wj5"]
material = SubResource("StandardMaterial3D_jh5vx")

[sub_resource type="Animation" id="Animation_diuss"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("face/SpotLight3D2:light_energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("face/SpotLight3D:light_energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}

[sub_resource type="Animation" id="Animation_jh5vx"]
resource_name = "cligne"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("face/SpotLight3D2:light_energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.333333, 0.68),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [1.0, 0.0, 1.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("face/SpotLight3D:light_energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.333333, 0.68),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [1.0, 0.0, 1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1vahc"]
_data = {
&"RESET": SubResource("Animation_diuss"),
&"cligne": SubResource("Animation_jh5vx")
}

[sub_resource type="ORMMaterial3D" id="ORMMaterial3D_diuss"]
albedo_color = Color(0.807843, 0.517647, 0.313726, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_jh5vx"]
material = SubResource("ORMMaterial3D_diuss")

[node name="guy" type="StaticBody3D"]
script = ExtResource("1_x6tra")

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="face" type="Node3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="face"]
transform = Transform3D(1.53184, 0, 0, 0, 1.32238, 0, 0, 0, 0.984389, 0, 0, 0)
mesh = SubResource("SphereMesh_73wj5")
skeleton = NodePath("../..")

[node name="SpotLight3D" type="OmniLight3D" parent="face"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.486063, 0.0738019, -0.459827)
light_color = Color(1, 0.235294, 0, 1)
omni_range = 1.0
omni_attenuation = 0.39

[node name="SpotLight3D2" type="OmniLight3D" parent="face"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.557809, 0.115567, -0.40129)
light_color = Color(1, 0.235294, 0, 1)
omni_range = 1.0
omni_attenuation = 0.39

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_1vahc")
}

[node name="body" type="Node3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="body"]
transform = Transform3D(2.11833, 0, 0, 0, 1.43905, 0, 0, 0, 1.20285, -0.0469393, -1.89395, 0)
mesh = SubResource("CapsuleMesh_jh5vx")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
